<resources>
    <string name="app_name">AI-gen2-mobile</string>
    <string name="title_activity_main">AI Gen 2</string>
    <string name="first_fragment_label">Describe your desired AI image</string>
    <string name="second_fragment_label">Results</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="what_to_enter_hint">
        Describe the image in a natural way like\n\n
        \'A bear passing through a spooky forrest\'\n
        \'Donald trump alike dog sitting at a bar\'\n\n
        …
        anything you want!
    </string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="lbl_layout">Layout</string>
    <string name="lbl_no_layout">No layout</string>
    <string name="lbl_artist_type">Artist type</string>
    <string name="chk_random_artist_type">Random</string>
    <string name="lbl_max_artists">Max. artists</string>
    <string name="lbl_no_artists">None</string>
    <string name="spinner_none">(none)</string>
    <string name="result_undefined">undefined</string>
    <string name="lbl_num_artists">Num of artists</string>
    <string name="lbl_result_header">Here are some possible sentences</string>
    <string name="instant_copy_to_clipboard">Instant copy2clipboard</string>
    <string name="reload">Reload</string>
    <string name="dialogOk">OK</string>
    <string name="titleError">Error</string>
    <string name="dialogWhoCares">Dismiss</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="render_result_dialog_title">Render details</string>
    <string name="lbl_camera">Camera</string>
    <string name="chk_random_camera">Random</string>
    <string name="lbl_random_words">Random words (few … many)</string>
    <string name="lbl_sentences_count">Number of sentences you\'d like to have</string>
    <string name="lbl_resolution">Resolution</string>
    <string name="chk_random_resolution">Random</string>
    <string name="receive_result_header">Do you notice your creation?</string>
    <string name="lbl_what_was_rendered">Your query</string>
    <string name="lbl_what_was_rendered_date">Date</string>
    <string name="text_copied">Text copied</string>
    <string name="lbl_what_was_rendered_engine">Rendered by</string>
    <string name="lbl_what_was_rendered_credits">Overall costs</string>
    <string name="image_received_description">Image you pasted</string>
    <string name="lbl_what_was_rendered_query">Resulting in</string>
    <string name="cancel">Cancel</string>
    <string name="result_save">Save</string>
    <string name="emptyListText">(Nothing to display)</string>
    <string name="btn_back">Back</string>
    <string name="title_no_query">Warning</string>
    <string name="message_no_query">I don\'t know what(!) you rendered before as you did not use a text from results.</string>
    <string name="title_result_stored">Result stored</string>
    <string name="msg_result_stored">Your rendered result was stored into history\'s database.</string>
    <string name="btn_show_in_history">Show history</string>
    <string name="content_description_stats_info">Show stats</string>
    <string name="history_entry_deleted_snackbar">Item was removed from the list.</string>
    <string name="history_entry_created_snackbar">Render result created.</string>
    <string name="history_entry_show_snackbar">View creations</string>
    <string name="undo_snackbar">Undo</string>
    <string name="permanent_deleted_toast">History entry permanently deleted.</string>
    <string name="render_results_title">What you\'ve created so far</string>
    <string name="render_details_title">Your creation</string>
    <string name="receive_image_title">Insert render result</string>
    <string name="lbl_render_results">So far</string>
    <string name="lbl_gallery_title">Gallery</string>
    <string name="lbl_gallery_detail_title">Your creation</string>
    <string name="lbl_clear_text">Clear the input to zero chars</string>
    <string name="simple_translation_checkbox">Translate my input to English</string>
    <string name="unable_to_download_translation">Language pack download failed.</string>
    <string name="unable_to_translate">"Unable to translate:"</string>
    <string name="btn_share">Share</string>
    <string name="share_with_title">Share with app</string>
    <string name="btn_render_details_replace_btn">Replace</string>
    <string name="prompt_replace_image">Do you want to replace the original (%1$d bytes) with the chosen image (%2$d bytes)?</string>
    <string name="settings">Settings</string>
    <string name="no_content">Nothing to display.\n\nPaste your rendered\nresults to me ;-)</string>
    <string name="empty_result_content_descriptor">Image displaying an empty room.</string>
    <string name="pref_section_main">General</string>
    <string name="pref_check_translation">Results in English (en-US)</string>
    <string name="pref_section_any">Section what ever</string>
    <string name="pref_title_ai_site_url">AI renderer\'s URL</string>
    <string name="pref_goto_ai_site">Test URL</string>
    <string name="lbl_settings_fragment">Settings</string>
    <string name="show_license">Licenses</string>
    <string name="pref_summary_ai_site_url">The URL of your preferred AI generator</string>
    <string name="pref_summary_translation">Some engines require en-US language as their input</string>
    <string name="pref_summary_goto_ai_site">Click to validate URL</string>
    <string name="btn_delete">Delete image</string>
    <string name="history_thumb_content_description">Thumbnail of render result</string>
    <string name="pref_use_trash_summary">Deleted images go to trash and can be restored</string>
    <string name="pref_use_trash">Use recycle bin</string>
    <string name="action_switch_trash">Show trash bin</string>
    <string name="action_delete">Delete</string>
    <string name="lbl_trash_bin_title">Trash bin</string>
    <string name="action_restore">Restore</string>
    <string name="lbl_trash_is_empty">Nothing to display\n\nTrash bin is empty.</string>
    <string name="empty_trash">Empty trash</string>
    <string name="empty_trash_prompt">This action can\'t be undone!\n\nAre you sure?</string>
    <string name="pref_section_backup">Backup</string>
    <string name="pref_create_backup">Create backup</string>
    <string name="pref_create_backup_summary">Create a local copy of your creations</string>
    <string name="pref_restore_backup">Restore from backup</string>
    <string name="pref_restore_backup_summary">No backup files found</string>
    <string name="pref_backup_date">Backup date %s, %d images, size %s</string>
    <string name="pref_backup_no_backup">No backup file(s) found yet</string>
    <string name="pref_check_remove_obsolete_backups">Keep only one backup</string>
    <string name="pref_check_remove_obsolete_backups_summary">Former backups will be deleted</string>
    <string name="pref_remove_obsolete_result">%d backups removed</string>
    <string name="pref_backup_created_toast">Backup has been created, size %s</string>
    <string name="pref_backup_restored">%d images restored from backup.</string>
    <string name="pref_backup_restored_with_failures">%d images restored, but %d warnings/failures occurred\n\nDo you want to have a look at these?</string>
    <string name="dialog_title_log">Log file</string>
    <string name="include_description">Include description</string>
    <string name="pref_check_open_immediate">Open immediately</string>
    <string name="pref_check_open_immediate_summary">Opens URL when selecting a result</string>
    <string name="pref_backup_in_progress">Creating backup…</string>

</resources>