<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_section_main">

        <CheckBoxPreference
            android:key="pref_translate"
            android:title="@string/pref_check_translation"
            android:summary="@string/pref_summary_translation"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_use_trash"
            android:title="@string/pref_use_trash"
            android:summary="@string/pref_use_trash_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_section_any">

        <EditTextPreference
            android:key="pref_render_engine_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ai_site_url"
            android:summary="@string/pref_summary_ai_site_url"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="pref_start_immediate"
            android:summary="@string/pref_check_open_immediate_summary"
            android:title="@string/pref_check_open_immediate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_section_backup">

        <Preference
            android:key="pref_create_backup"
            android:summary="@string/pref_create_backup_summary"
            android:title="@string/pref_create_backup" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_remove_obsolete_backups"
            android:summary="@string/pref_check_remove_obsolete_backups_summary"
            android:title="@string/pref_check_remove_obsolete_backups" />

        <Preference
            android:key="pref_restore_backup"
            android:summary="@string/pref_restore_backup_summary"
            android:title="@string/pref_restore_backup" />

    </PreferenceCategory>

</PreferenceScreen>