<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/lbl_gallery_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_so_far"
        android:icon="@drawable/ic_explore"
        android:title="@string/lbl_render_results"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_license"
        android:title="@string/show_license"
        app:showAsAction="never" />

</menu>