<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="org.ww.ai.fragment.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/main_fragment">

        <action
            android:id="@+id/action_MainFragment_to_ShowSentencesFragment"
            app:destination="@id/ShowSentencesFragment" />
        <action
            android:id="@+id/action_MainFragment_to_RenderResultsFragment"
            app:destination="@id/RenderResultsFragment" />
        <action
            android:id="@+id/action_MainFragment_to_ResultsGalleryFragment"
            app:destination="@id/ResultsGalleryFragment" />
        <action
            android:id="@+id/action_MainFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_MainFragment_to_LicenseFragment"
            app:destination="@id/LicenseFragment" />
    </fragment>
    <fragment
        android:id="@+id/ShowSentencesFragment"
        android:name="org.ww.ai.fragment.ShowSentencesFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/show_sentences_fragment">

        <action
            android:id="@+id/action_ShowSentencesFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/RenderResultsFragment"
        android:name="org.ww.ai.fragment.RenderResultsFragment"
        android:label="@string/render_results_title"
        tools:layout="@layout/show_sentences_fragment">
        <action
            android:id="@+id/action_RenderResultsFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_RenderResultsFragment_to_ShowRenderDetailsFragment"
            app:destination="@id/RenderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/RenderDetailsFragment"
        android:name="org.ww.ai.fragment.RenderDetailsFragment"
        android:label="@string/render_details_title"
        tools:layout="@layout/render_details_fragment">
        <action
            android:id="@+id/action_ShowRenderDetailsFragment_to_RenderResultsFragment"
            app:destination="@id/RenderResultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ResultsGalleryFragment"
        android:name="org.ww.ai.fragment.ResultsGalleryFragment"
        android:label="@string/lbl_gallery_title"
        tools:layout="@layout/results_gallery_fragment">
        <action
            android:id="@+id/action_ResultsGalleryFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_ResultsGalleryFragment_to_GalleryFullSizeFragment"
            app:destination="@id/GalleryFullSizeFragment" />
    </fragment>
    <fragment
        android:id="@+id/GalleryFullSizeFragment"
        android:name="org.ww.ai.fragment.GalleryFullSizeFragment"
        android:label="@string/lbl_gallery_title"
        tools:layout="@layout/results_gallery_fragment">
        <action
            android:id="@+id/action_GalleryFullSizeFragment_to_ResultsGalleryFragment"
            app:destination="@id/ResultsGalleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="org.ww.ai.fragment.SettingsFragment"
        android:label="@string/lbl_settings_fragment" >
        <action
            android:id="@+id/action_SettingsFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/LicenseFragment"
        android:name="org.ww.ai.fragment.LicenseFragment"
        android:label="@string/show_license" >
        <action
            android:id="@+id/action_LicenseFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

</navigation>