<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ShowSentencesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/receive_title"
            android:paddingTop="2dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/receive_bitmap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/no_image"
            android:contentDescription="@string/image_received_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/lbl_what_was_rendered" />

            <TextView
                android:id="@+id/what_was_rendered_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:textSize="18sp"
                android:textIsSelectable="true"
                android:maxLines="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/lbl_what_was_rendered_query" />


            <TextView
                android:id="@+id/what_was_rendered_query_value"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textSize="14sp"
                android:textColor="@color/lightGrayTransparent"
                android:textIsSelectable="true"
                android:maxLines="99" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/lbl_what_was_rendered_date" />

            <TextView
                android:id="@+id/what_was_rendered_date"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />

        </LinearLayout>

        <include layout="@layout/comp_render_models" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

        <Button
            android:id="@+id/btn_result_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_result_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.7"
            android:text="@string/result_save" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>